--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>lalalal</title>
 </head>
 <body>
-    
+    <div class="div">
+        <img class="imagens" src="imagem/1.jpg">
+        <img class="imagens" src="imagem/2.jpg">
+        <img class="imagens" src="imagem/3.jpg">
+    </div>
 </body>
 </html>
