--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="div">
         <img class="imagens" src="imagem/1.jpg">
-        <img class="imagens" src="imagem/2.jpg">
+        <img class="imagens" src="imagem/22.webp">
         <img class="imagens" src="imagem/3.jpg">
     </div>
 </body>
