--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
         <img class="imagens" src="imagem/22.webp">
         <img class="imagens" src="imagem/3.jpg">
     </div>
+
+    <div class="div">
+        <img class="imagens" src="imagem/a1.webp">
+        <img class="imagens" src="imagem/a2.jpg">
+        <img class="imagens" src="imagem/a3.jpg">
+    </div>
+
 </body>
 </html>
