--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
         <img class="imagens" src="imagem/a3.jpg">
     </div>
 
+    <div class="div"></div>
+        <img class="imagens" src="imagem/b1.jpg">
+        <img class="imagens" src="imagem/b2.jpg">
+        <img class="imagens" src="imagem/b3.jpg">
+    </div>
+    
 </body>
 </html>
