--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
         <img class="imagens" src="imagem/a3.jpg">
     </div>
 
-    <div class="div"></div>
+    <div class="div">
         <img class="imagens" src="imagem/b1.jpg">
         <img class="imagens" src="imagem/b2.jpg">
         <img class="imagens" src="imagem/b3.jpg">
     </div>
-    
+
+    <div class="div">
+        <img class="imagens" src="imagem/c1.jpg">
+        <img class="imagens" src="imagem/c2.jpg">
+        <img class="imagens" src="imagem/c3.jpg">
+    </div>
+
+
 </body>
 </html>
