--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
         <img class="imagens" src="imagem/c3.jpg">
     </div>
 
+    <div class="div">
+        <img class="imagens" src="imagem/d1.jpg">
+        <img class="imagens" src="imagem/d2.jpg">
+        <img class="imagens" src="imagem/d3.jpg">
+    </div>
+    
+    <div class="div"></div>
+        <img class="imagens" src="imagem/d1.jpg">
+        <img class="imagens" src="imagem/d2.jpg">
+        <img class="imagens" src="imagem/d3.jpg">
+    </div>
 
 </body>
 </html>
