--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
     </div>
     
     <div class="div"></div>
-        <img class="imagens" src="imagem/d1.jpg">
-        <img class="imagens" src="imagem/d2.jpg">
-        <img class="imagens" src="imagem/d3.jpg">
+        <img class="imagens" src="imagem/e1.jpg">
+        <img class="imagens" src="imagem/e2.jpeg">
+        <img class="imagens" src="imagem/e3.webp">
     </div>
+
 
 </body>
 </html>
