--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         <img class="imagens" src="imagem/e3.webp">
     </div>
 
+    <div class="div"></div>
+        <img class="imagens" src="imagem/f1.jpg">
+        <img class="imagens" src="imagem/f2.jpg">
+        <img class="imagens" src="imagem/f3.jpg">
+    </div>
 
 </body>
 </html>
