--- a/index.html
+++ b/index.html
@@ -44,10 +44,16 @@
     </div>
 
     <div class="div"></div>
-        <img class="imagens" src="imagem/f1.jpg">
-        <img class="imagens" src="imagem/f2.jpg">
+        <img class="imagens" src="imagem/f1.png">
+        <img class="imagens" src="imagem/f2.webp">
         <img class="imagens" src="imagem/f3.jpg">
     </div>
 
+    <div class="div"></div>
+        <img class="imagens" src="imagem/d1.jpg">
+        <img class="imagens" src="imagem/d2.jpg">
+        <img class="imagens" src="imagem/d3.jpg">
+    </div>
+    
 </body>
 </html>
