--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     </div>
 
     <div class="div"></div>
-        <img class="imagens" src="imagem/d1.jpg">
-        <img class="imagens" src="imagem/d2.jpg">
-        <img class="imagens" src="imagem/d3.jpg">
+        <img class="imagens" src="imagem/g1.webp">
+        <img class="imagens" src="imagem/g2.webp">
+        <img class="imagens" src="imagem/g3.jpg">
     </div>
-    
+
 </body>
 </html>
