--- a/index.html
+++ b/index.html
@@ -55,5 +55,10 @@
         <img class="imagens" src="imagem/g3.jpg">
     </div>
 
+    <div class="div"></div>
+        <img class="imagens" src="imagem/g1.webp">
+        <img class="imagens" src="imagem/g2.webp">
+        <img class="imagens" src="imagem/g3.jpg">
+    </div>
 </body>
 </html>
