--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
     </div>
 
     <div class="div"></div>
+        <img class="imagens" src="imagem/h1.jpg">
+        <img class="imagens" src="imagem/h2.png">
+        <img class="imagens" src="imagem/h3.jpg">
+    </div>
+
+    <div class="div"></div>
         <img class="imagens" src="imagem/g1.webp">
         <img class="imagens" src="imagem/g2.webp">
         <img class="imagens" src="imagem/g3.jpg">
