--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
     </div>
 
     <div class="div"></div>
+        <img class="imagens" src="imagem/i1.jpg">
+        <img class="imagens" src="imagem/i2.jpg">
+        <img class="imagens" src="imagem/i3.webp">
+    </div>
+
+    <div class="div"></div>
         <img class="imagens" src="imagem/g1.webp">
         <img class="imagens" src="imagem/g2.webp">
         <img class="imagens" src="imagem/g3.jpg">
